// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration android android/resources should match snapshot 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>

<!--
  Do not edit directly
  Generated on Sat, 01 Jan 2000 00:00:00 GMT
-->
<resources>
  <color name=\\"color_background_primary\\">#ffffffff</color>
  <color name=\\"color_background_secondary\\">#fff3f4f4</color>
  <color name=\\"color_background_tertiary\\">#ffdee1e1</color>
  <color name=\\"color_background_danger\\">#ffffeae9</color>
  <color name=\\"color_background_warning\\">#ffffede3</color>
  <color name=\\"color_background_success\\">#ffebf9eb</color>
  <color name=\\"color_background_info\\">#ffe9f8ff</color>
  <color name=\\"color_background_disabled\\">#ffdee1e1</color>
  <color name=\\"color_border_primary\\">#ffc8cccc</color>
  <color name=\\"color_brand_primary\\">#ff0b8599</color>
  <color name=\\"color_brand_secondary\\">#ff6f5ed3</color>
  <color name=\\"color_core_green_0\\">#ffebf9eb</color>
  <color name=\\"color_core_green_100\\">#ffd7f4d7</color>
  <color name=\\"color_core_green_200\\">#ffc2f2bd</color>
  <color name=\\"color_core_green_300\\">#ff98e58e</color>
  <color name=\\"color_core_green_400\\">#ff75dd66</color>
  <color name=\\"color_core_green_500\\">#ff59cb59</color>
  <color name=\\"color_core_green_600\\">#ff2bb656</color>
  <color name=\\"color_core_green_700\\">#ff0ca750</color>
  <color name=\\"color_core_green_800\\">#ff008b46</color>
  <color name=\\"color_core_green_900\\">#ff006b40</color>
  <color name=\\"color_core_green_1000\\">#ff08422f</color>
  <color name=\\"color_core_green_1100\\">#ff002b20</color>
  <color name=\\"color_core_teal_0\\">#ffe5f9f5</color>
  <color name=\\"color_core_teal_100\\">#ffcdf7ef</color>
  <color name=\\"color_core_teal_200\\">#ffb3f2e6</color>
  <color name=\\"color_core_teal_300\\">#ff7dead5</color>
  <color name=\\"color_core_teal_400\\">#ff24e0c5</color>
  <color name=\\"color_core_teal_500\\">#ff08c4b2</color>
  <color name=\\"color_core_teal_600\\">#ff00a99c</color>
  <color name=\\"color_core_teal_700\\">#ff0b968f</color>
  <color name=\\"color_core_teal_800\\">#ff067c7c</color>
  <color name=\\"color_core_teal_900\\">#ff026661</color>
  <color name=\\"color_core_teal_1000\\">#ff083f3f</color>
  <color name=\\"color_core_teal_1100\\">#ff002528</color>
  <color name=\\"color_core_aqua_0\\">#ffd9fcfb</color>
  <color name=\\"color_core_aqua_100\\">#ffc5f9f9</color>
  <color name=\\"color_core_aqua_200\\">#ffa5f2f2</color>
  <color name=\\"color_core_aqua_300\\">#ff76e5e2</color>
  <color name=\\"color_core_aqua_400\\">#ff33d6e2</color>
  <color name=\\"color_core_aqua_500\\">#ff17b8ce</color>
  <color name=\\"color_core_aqua_600\\">#ff0797ae</color>
  <color name=\\"color_core_aqua_700\\">#ff0b8599</color>
  <color name=\\"color_core_aqua_800\\">#ff0f6e84</color>
  <color name=\\"color_core_aqua_900\\">#ff035e73</color>
  <color name=\\"color_core_aqua_1000\\">#ff083d4f</color>
  <color name=\\"color_core_aqua_1100\\">#ff002838</color>
  <color name=\\"color_core_blue_0\\">#ffe9f8ff</color>
  <color name=\\"color_core_blue_100\\">#ffdcf2ff</color>
  <color name=\\"color_core_blue_200\\">#ffc7e4f9</color>
  <color name=\\"color_core_blue_300\\">#ffa1d2f8</color>
  <color name=\\"color_core_blue_400\\">#ff56adf5</color>
  <color name=\\"color_core_blue_500\\">#ff3896e3</color>
  <color name=\\"color_core_blue_600\\">#ff2b87d3</color>
  <color name=\\"color_core_blue_700\\">#ff2079c3</color>
  <color name=\\"color_core_blue_800\\">#ff116daa</color>
  <color name=\\"color_core_blue_900\\">#ff0c5689</color>
  <color name=\\"color_core_blue_1000\\">#ff0a3960</color>
  <color name=\\"color_core_blue_1100\\">#ff002138</color>
  <color name=\\"color_core_purple_0\\">#fff2f2f9</color>
  <color name=\\"color_core_purple_100\\">#ffeaeaf9</color>
  <color name=\\"color_core_purple_200\\">#ffd8d7f9</color>
  <color name=\\"color_core_purple_300\\">#ffc1c1f7</color>
  <color name=\\"color_core_purple_400\\">#ffa193f2</color>
  <color name=\\"color_core_purple_500\\">#ff9180f4</color>
  <color name=\\"color_core_purple_600\\">#ff816fea</color>
  <color name=\\"color_core_purple_700\\">#ff6f5ed3</color>
  <color name=\\"color_core_purple_800\\">#ff5e4eba</color>
  <color name=\\"color_core_purple_900\\">#ff483a9c</color>
  <color name=\\"color_core_purple_1000\\">#ff2d246b</color>
  <color name=\\"color_core_purple_1100\\">#ff1d1d38</color>
  <color name=\\"color_core_magenta_0\\">#fffef0ff</color>
  <color name=\\"color_core_magenta_100\\">#fff9e3fc</color>
  <color name=\\"color_core_magenta_200\\">#fff4c4f7</color>
  <color name=\\"color_core_magenta_300\\">#ffedadf2</color>
  <color name=\\"color_core_magenta_400\\">#fff282f5</color>
  <color name=\\"color_core_magenta_500\\">#ffdb61db</color>
  <color name=\\"color_core_magenta_600\\">#ffc44eb9</color>
  <color name=\\"color_core_magenta_700\\">#ffac44a8</color>
  <color name=\\"color_core_magenta_800\\">#ff8f3896</color>
  <color name=\\"color_core_magenta_900\\">#ff6c2277</color>
  <color name=\\"color_core_magenta_1000\\">#ff451551</color>
  <color name=\\"color_core_magenta_1100\\">#ff29192d</color>
  <color name=\\"color_core_pink_0\\">#ffffe9f3</color>
  <color name=\\"color_core_pink_100\\">#fffcdbeb</color>
  <color name=\\"color_core_pink_200\\">#ffffb5d5</color>
  <color name=\\"color_core_pink_300\\">#ffff95c1</color>
  <color name=\\"color_core_pink_400\\">#ffff76ae</color>
  <color name=\\"color_core_pink_500\\">#ffef588b</color>
  <color name=\\"color_core_pink_600\\">#ffe0447c</color>
  <color name=\\"color_core_pink_700\\">#ffce3665</color>
  <color name=\\"color_core_pink_800\\">#ffb22f5b</color>
  <color name=\\"color_core_pink_900\\">#ff931847</color>
  <color name=\\"color_core_pink_1000\\">#ff561231</color>
  <color name=\\"color_core_pink_1100\\">#ff2b1721</color>
  <color name=\\"color_core_red_0\\">#ffffeae9</color>
  <color name=\\"color_core_red_100\\">#ffffd5d2</color>
  <color name=\\"color_core_red_200\\">#ffffb8b1</color>
  <color name=\\"color_core_red_300\\">#ffff9c8f</color>
  <color name=\\"color_core_red_400\\">#ffff7f6e</color>
  <color name=\\"color_core_red_500\\">#fff76054</color>
  <color name=\\"color_core_red_600\\">#ffed4c42</color>
  <color name=\\"color_core_red_700\\">#ffdb3e3e</color>
  <color name=\\"color_core_red_800\\">#ffc63434</color>
  <color name=\\"color_core_red_900\\">#ff992222</color>
  <color name=\\"color_core_red_1000\\">#ff6d1313</color>
  <color name=\\"color_core_red_1100\\">#ff2b1111</color>
  <color name=\\"color_core_orange_0\\">#ffffede3</color>
  <color name=\\"color_core_orange_100\\">#fffcdccc</color>
  <color name=\\"color_core_orange_200\\">#ffffc6a4</color>
  <color name=\\"color_core_orange_300\\">#ffffb180</color>
  <color name=\\"color_core_orange_400\\">#ffff9c5d</color>
  <color name=\\"color_core_orange_500\\">#fffc8943</color>
  <color name=\\"color_core_orange_600\\">#fff57d33</color>
  <color name=\\"color_core_orange_700\\">#ffed7024</color>
  <color name=\\"color_core_orange_800\\">#ffce5511</color>
  <color name=\\"color_core_orange_900\\">#ff962c0b</color>
  <color name=\\"color_core_orange_1000\\">#ff601700</color>
  <color name=\\"color_core_orange_1100\\">#ff2d130e</color>
  <color name=\\"color_core_neutral_0\\">#ffffffff</color>
  <color name=\\"color_core_neutral_100\\">#fff3f4f4</color>
  <color name=\\"color_core_neutral_200\\">#ffdee1e1</color>
  <color name=\\"color_core_neutral_300\\">#ffc8cccc</color>
  <color name=\\"color_core_neutral_400\\">#ffb0b6b7</color>
  <color name=\\"color_core_neutral_500\\">#ff929a9b</color>
  <color name=\\"color_core_neutral_600\\">#ff6e797a</color>
  <color name=\\"color_core_neutral_700\\">#ff515e5f</color>
  <color name=\\"color_core_neutral_800\\">#ff364141</color>
  <color name=\\"color_core_neutral_900\\">#ff273333</color>
  <color name=\\"color_core_neutral_1000\\">#ff162020</color>
  <color name=\\"color_core_neutral_1100\\">#ff040404</color>
  <color name=\\"color_core_yellow_0\\">#fffff8e2</color>
  <color name=\\"color_core_yellow_100\\">#fffdefcd</color>
  <color name=\\"color_core_yellow_200\\">#ffffe99a</color>
  <color name=\\"color_core_yellow_300\\">#ffffe16e</color>
  <color name=\\"color_core_yellow_400\\">#ffffd943</color>
  <color name=\\"color_core_yellow_500\\">#ffffcd1c</color>
  <color name=\\"color_core_yellow_600\\">#ffffbc00</color>
  <color name=\\"color_core_yellow_700\\">#ffdd9903</color>
  <color name=\\"color_core_yellow_800\\">#ffba7506</color>
  <color name=\\"color_core_yellow_900\\">#ff944c0c</color>
  <color name=\\"color_core_yellow_1000\\">#ff542a00</color>
  <color name=\\"color_core_yellow_1100\\">#ff2d1a05</color>
  <color name=\\"color_font_primary\\">#ff040404</color>
  <color name=\\"color_font_secondary\\">#ff273333</color>
  <color name=\\"color_font_tertiary\\">#ff364141</color>
  <color name=\\"color_font_interactive\\">#ff0b8599</color>
  <color name=\\"color_font_interactive_hover\\">#ff0b8599</color>
  <color name=\\"color_font_interactive_active\\">#ff6f5ed3</color>
  <color name=\\"color_font_interactive_disabled\\">#ff364141</color>
  <color name=\\"color_font_danger\\">#ff6d1313</color>
  <color name=\\"color_font_warning\\">#ff601700</color>
  <color name=\\"color_font_success\\">#ff08422f</color>
  <dimen name=\\"size_border_radius_large\\">480.00dp</dimen>
  <dimen name=\\"size_font_small\\">12.00sp</dimen>
  <dimen name=\\"size_font_medium\\">16.00sp</dimen>
  <dimen name=\\"size_font_large\\">24.00sp</dimen>
  <dimen name=\\"size_font_xl\\">36.00sp</dimen>
  <dimen name=\\"size_padding_small\\">8.00dp</dimen>
  <dimen name=\\"size_padding_medium\\">16.00dp</dimen>
  <dimen name=\\"size_padding_large\\">16.00dp</dimen>
  <dimen name=\\"size_padding_xl\\">16.00dp</dimen>
  
</resources>
"
`;

exports[`integration android android/resources with filter should match snapshot 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>

<!--
  Do not edit directly
  Generated on Sat, 01 Jan 2000 00:00:00 GMT
-->
<resources>
  <color name=\\"color_background_primary\\">#ffffffff</color>
  <color name=\\"color_background_secondary\\">#fff3f4f4</color>
  <color name=\\"color_background_tertiary\\">#ffdee1e1</color>
  <color name=\\"color_background_danger\\">#ffffeae9</color>
  <color name=\\"color_background_warning\\">#ffffede3</color>
  <color name=\\"color_background_success\\">#ffebf9eb</color>
  <color name=\\"color_background_info\\">#ffe9f8ff</color>
  <color name=\\"color_background_disabled\\">#ffdee1e1</color>
  <color name=\\"color_border_primary\\">#ffc8cccc</color>
  <color name=\\"color_brand_primary\\">#ff0b8599</color>
  <color name=\\"color_brand_secondary\\">#ff6f5ed3</color>
  <color name=\\"color_core_green_0\\">#ffebf9eb</color>
  <color name=\\"color_core_green_100\\">#ffd7f4d7</color>
  <color name=\\"color_core_green_200\\">#ffc2f2bd</color>
  <color name=\\"color_core_green_300\\">#ff98e58e</color>
  <color name=\\"color_core_green_400\\">#ff75dd66</color>
  <color name=\\"color_core_green_500\\">#ff59cb59</color>
  <color name=\\"color_core_green_600\\">#ff2bb656</color>
  <color name=\\"color_core_green_700\\">#ff0ca750</color>
  <color name=\\"color_core_green_800\\">#ff008b46</color>
  <color name=\\"color_core_green_900\\">#ff006b40</color>
  <color name=\\"color_core_green_1000\\">#ff08422f</color>
  <color name=\\"color_core_green_1100\\">#ff002b20</color>
  <color name=\\"color_core_teal_0\\">#ffe5f9f5</color>
  <color name=\\"color_core_teal_100\\">#ffcdf7ef</color>
  <color name=\\"color_core_teal_200\\">#ffb3f2e6</color>
  <color name=\\"color_core_teal_300\\">#ff7dead5</color>
  <color name=\\"color_core_teal_400\\">#ff24e0c5</color>
  <color name=\\"color_core_teal_500\\">#ff08c4b2</color>
  <color name=\\"color_core_teal_600\\">#ff00a99c</color>
  <color name=\\"color_core_teal_700\\">#ff0b968f</color>
  <color name=\\"color_core_teal_800\\">#ff067c7c</color>
  <color name=\\"color_core_teal_900\\">#ff026661</color>
  <color name=\\"color_core_teal_1000\\">#ff083f3f</color>
  <color name=\\"color_core_teal_1100\\">#ff002528</color>
  <color name=\\"color_core_aqua_0\\">#ffd9fcfb</color>
  <color name=\\"color_core_aqua_100\\">#ffc5f9f9</color>
  <color name=\\"color_core_aqua_200\\">#ffa5f2f2</color>
  <color name=\\"color_core_aqua_300\\">#ff76e5e2</color>
  <color name=\\"color_core_aqua_400\\">#ff33d6e2</color>
  <color name=\\"color_core_aqua_500\\">#ff17b8ce</color>
  <color name=\\"color_core_aqua_600\\">#ff0797ae</color>
  <color name=\\"color_core_aqua_700\\">#ff0b8599</color>
  <color name=\\"color_core_aqua_800\\">#ff0f6e84</color>
  <color name=\\"color_core_aqua_900\\">#ff035e73</color>
  <color name=\\"color_core_aqua_1000\\">#ff083d4f</color>
  <color name=\\"color_core_aqua_1100\\">#ff002838</color>
  <color name=\\"color_core_blue_0\\">#ffe9f8ff</color>
  <color name=\\"color_core_blue_100\\">#ffdcf2ff</color>
  <color name=\\"color_core_blue_200\\">#ffc7e4f9</color>
  <color name=\\"color_core_blue_300\\">#ffa1d2f8</color>
  <color name=\\"color_core_blue_400\\">#ff56adf5</color>
  <color name=\\"color_core_blue_500\\">#ff3896e3</color>
  <color name=\\"color_core_blue_600\\">#ff2b87d3</color>
  <color name=\\"color_core_blue_700\\">#ff2079c3</color>
  <color name=\\"color_core_blue_800\\">#ff116daa</color>
  <color name=\\"color_core_blue_900\\">#ff0c5689</color>
  <color name=\\"color_core_blue_1000\\">#ff0a3960</color>
  <color name=\\"color_core_blue_1100\\">#ff002138</color>
  <color name=\\"color_core_purple_0\\">#fff2f2f9</color>
  <color name=\\"color_core_purple_100\\">#ffeaeaf9</color>
  <color name=\\"color_core_purple_200\\">#ffd8d7f9</color>
  <color name=\\"color_core_purple_300\\">#ffc1c1f7</color>
  <color name=\\"color_core_purple_400\\">#ffa193f2</color>
  <color name=\\"color_core_purple_500\\">#ff9180f4</color>
  <color name=\\"color_core_purple_600\\">#ff816fea</color>
  <color name=\\"color_core_purple_700\\">#ff6f5ed3</color>
  <color name=\\"color_core_purple_800\\">#ff5e4eba</color>
  <color name=\\"color_core_purple_900\\">#ff483a9c</color>
  <color name=\\"color_core_purple_1000\\">#ff2d246b</color>
  <color name=\\"color_core_purple_1100\\">#ff1d1d38</color>
  <color name=\\"color_core_magenta_0\\">#fffef0ff</color>
  <color name=\\"color_core_magenta_100\\">#fff9e3fc</color>
  <color name=\\"color_core_magenta_200\\">#fff4c4f7</color>
  <color name=\\"color_core_magenta_300\\">#ffedadf2</color>
  <color name=\\"color_core_magenta_400\\">#fff282f5</color>
  <color name=\\"color_core_magenta_500\\">#ffdb61db</color>
  <color name=\\"color_core_magenta_600\\">#ffc44eb9</color>
  <color name=\\"color_core_magenta_700\\">#ffac44a8</color>
  <color name=\\"color_core_magenta_800\\">#ff8f3896</color>
  <color name=\\"color_core_magenta_900\\">#ff6c2277</color>
  <color name=\\"color_core_magenta_1000\\">#ff451551</color>
  <color name=\\"color_core_magenta_1100\\">#ff29192d</color>
  <color name=\\"color_core_pink_0\\">#ffffe9f3</color>
  <color name=\\"color_core_pink_100\\">#fffcdbeb</color>
  <color name=\\"color_core_pink_200\\">#ffffb5d5</color>
  <color name=\\"color_core_pink_300\\">#ffff95c1</color>
  <color name=\\"color_core_pink_400\\">#ffff76ae</color>
  <color name=\\"color_core_pink_500\\">#ffef588b</color>
  <color name=\\"color_core_pink_600\\">#ffe0447c</color>
  <color name=\\"color_core_pink_700\\">#ffce3665</color>
  <color name=\\"color_core_pink_800\\">#ffb22f5b</color>
  <color name=\\"color_core_pink_900\\">#ff931847</color>
  <color name=\\"color_core_pink_1000\\">#ff561231</color>
  <color name=\\"color_core_pink_1100\\">#ff2b1721</color>
  <color name=\\"color_core_red_0\\">#ffffeae9</color>
  <color name=\\"color_core_red_100\\">#ffffd5d2</color>
  <color name=\\"color_core_red_200\\">#ffffb8b1</color>
  <color name=\\"color_core_red_300\\">#ffff9c8f</color>
  <color name=\\"color_core_red_400\\">#ffff7f6e</color>
  <color name=\\"color_core_red_500\\">#fff76054</color>
  <color name=\\"color_core_red_600\\">#ffed4c42</color>
  <color name=\\"color_core_red_700\\">#ffdb3e3e</color>
  <color name=\\"color_core_red_800\\">#ffc63434</color>
  <color name=\\"color_core_red_900\\">#ff992222</color>
  <color name=\\"color_core_red_1000\\">#ff6d1313</color>
  <color name=\\"color_core_red_1100\\">#ff2b1111</color>
  <color name=\\"color_core_orange_0\\">#ffffede3</color>
  <color name=\\"color_core_orange_100\\">#fffcdccc</color>
  <color name=\\"color_core_orange_200\\">#ffffc6a4</color>
  <color name=\\"color_core_orange_300\\">#ffffb180</color>
  <color name=\\"color_core_orange_400\\">#ffff9c5d</color>
  <color name=\\"color_core_orange_500\\">#fffc8943</color>
  <color name=\\"color_core_orange_600\\">#fff57d33</color>
  <color name=\\"color_core_orange_700\\">#ffed7024</color>
  <color name=\\"color_core_orange_800\\">#ffce5511</color>
  <color name=\\"color_core_orange_900\\">#ff962c0b</color>
  <color name=\\"color_core_orange_1000\\">#ff601700</color>
  <color name=\\"color_core_orange_1100\\">#ff2d130e</color>
  <color name=\\"color_core_neutral_0\\">#ffffffff</color>
  <color name=\\"color_core_neutral_100\\">#fff3f4f4</color>
  <color name=\\"color_core_neutral_200\\">#ffdee1e1</color>
  <color name=\\"color_core_neutral_300\\">#ffc8cccc</color>
  <color name=\\"color_core_neutral_400\\">#ffb0b6b7</color>
  <color name=\\"color_core_neutral_500\\">#ff929a9b</color>
  <color name=\\"color_core_neutral_600\\">#ff6e797a</color>
  <color name=\\"color_core_neutral_700\\">#ff515e5f</color>
  <color name=\\"color_core_neutral_800\\">#ff364141</color>
  <color name=\\"color_core_neutral_900\\">#ff273333</color>
  <color name=\\"color_core_neutral_1000\\">#ff162020</color>
  <color name=\\"color_core_neutral_1100\\">#ff040404</color>
  <color name=\\"color_core_yellow_0\\">#fffff8e2</color>
  <color name=\\"color_core_yellow_100\\">#fffdefcd</color>
  <color name=\\"color_core_yellow_200\\">#ffffe99a</color>
  <color name=\\"color_core_yellow_300\\">#ffffe16e</color>
  <color name=\\"color_core_yellow_400\\">#ffffd943</color>
  <color name=\\"color_core_yellow_500\\">#ffffcd1c</color>
  <color name=\\"color_core_yellow_600\\">#ffffbc00</color>
  <color name=\\"color_core_yellow_700\\">#ffdd9903</color>
  <color name=\\"color_core_yellow_800\\">#ffba7506</color>
  <color name=\\"color_core_yellow_900\\">#ff944c0c</color>
  <color name=\\"color_core_yellow_1000\\">#ff542a00</color>
  <color name=\\"color_core_yellow_1100\\">#ff2d1a05</color>
  <color name=\\"color_font_primary\\">#ff040404</color>
  <color name=\\"color_font_secondary\\">#ff273333</color>
  <color name=\\"color_font_tertiary\\">#ff364141</color>
  <color name=\\"color_font_interactive\\">#ff0b8599</color>
  <color name=\\"color_font_interactive_hover\\">#ff0b8599</color>
  <color name=\\"color_font_interactive_active\\">#ff6f5ed3</color>
  <color name=\\"color_font_interactive_disabled\\">#ff364141</color>
  <color name=\\"color_font_danger\\">#ff6d1313</color>
  <color name=\\"color_font_warning\\">#ff601700</color>
  <color name=\\"color_font_success\\">#ff08422f</color>
  
</resources>
"
`;

exports[`integration android android/resources with references should match snapshot 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>

<!--
  Do not edit directly
  Generated on Sat, 01 Jan 2000 00:00:00 GMT
-->
<resources>
  <color name=\\"color_background_primary\\">@color/color_core_neutral_0</color>
  <color name=\\"color_background_secondary\\">@color/color_core_neutral_100</color>
  <color name=\\"color_background_tertiary\\">@color/color_core_neutral_200</color>
  <color name=\\"color_background_danger\\">@color/color_core_red_0</color>
  <color name=\\"color_background_warning\\">@color/color_core_orange_0</color>
  <color name=\\"color_background_success\\">@color/color_core_green_0</color>
  <color name=\\"color_background_info\\">@color/color_core_blue_0</color>
  <color name=\\"color_background_disabled\\">@color/color_background_tertiary</color>
  <color name=\\"color_border_primary\\">@color/color_core_neutral_300</color>
  <color name=\\"color_brand_primary\\">@color/color_core_aqua_700</color>
  <color name=\\"color_brand_secondary\\">@color/color_core_purple_700</color>
  <color name=\\"color_core_green_0\\">#ffebf9eb</color>
  <color name=\\"color_core_green_100\\">#ffd7f4d7</color>
  <color name=\\"color_core_green_200\\">#ffc2f2bd</color>
  <color name=\\"color_core_green_300\\">#ff98e58e</color>
  <color name=\\"color_core_green_400\\">#ff75dd66</color>
  <color name=\\"color_core_green_500\\">#ff59cb59</color>
  <color name=\\"color_core_green_600\\">#ff2bb656</color>
  <color name=\\"color_core_green_700\\">#ff0ca750</color>
  <color name=\\"color_core_green_800\\">#ff008b46</color>
  <color name=\\"color_core_green_900\\">#ff006b40</color>
  <color name=\\"color_core_green_1000\\">#ff08422f</color>
  <color name=\\"color_core_green_1100\\">#ff002b20</color>
  <color name=\\"color_core_teal_0\\">#ffe5f9f5</color>
  <color name=\\"color_core_teal_100\\">#ffcdf7ef</color>
  <color name=\\"color_core_teal_200\\">#ffb3f2e6</color>
  <color name=\\"color_core_teal_300\\">#ff7dead5</color>
  <color name=\\"color_core_teal_400\\">#ff24e0c5</color>
  <color name=\\"color_core_teal_500\\">#ff08c4b2</color>
  <color name=\\"color_core_teal_600\\">#ff00a99c</color>
  <color name=\\"color_core_teal_700\\">#ff0b968f</color>
  <color name=\\"color_core_teal_800\\">#ff067c7c</color>
  <color name=\\"color_core_teal_900\\">#ff026661</color>
  <color name=\\"color_core_teal_1000\\">#ff083f3f</color>
  <color name=\\"color_core_teal_1100\\">#ff002528</color>
  <color name=\\"color_core_aqua_0\\">#ffd9fcfb</color>
  <color name=\\"color_core_aqua_100\\">#ffc5f9f9</color>
  <color name=\\"color_core_aqua_200\\">#ffa5f2f2</color>
  <color name=\\"color_core_aqua_300\\">#ff76e5e2</color>
  <color name=\\"color_core_aqua_400\\">#ff33d6e2</color>
  <color name=\\"color_core_aqua_500\\">#ff17b8ce</color>
  <color name=\\"color_core_aqua_600\\">#ff0797ae</color>
  <color name=\\"color_core_aqua_700\\">#ff0b8599</color>
  <color name=\\"color_core_aqua_800\\">#ff0f6e84</color>
  <color name=\\"color_core_aqua_900\\">#ff035e73</color>
  <color name=\\"color_core_aqua_1000\\">#ff083d4f</color>
  <color name=\\"color_core_aqua_1100\\">#ff002838</color>
  <color name=\\"color_core_blue_0\\">#ffe9f8ff</color>
  <color name=\\"color_core_blue_100\\">#ffdcf2ff</color>
  <color name=\\"color_core_blue_200\\">#ffc7e4f9</color>
  <color name=\\"color_core_blue_300\\">#ffa1d2f8</color>
  <color name=\\"color_core_blue_400\\">#ff56adf5</color>
  <color name=\\"color_core_blue_500\\">#ff3896e3</color>
  <color name=\\"color_core_blue_600\\">#ff2b87d3</color>
  <color name=\\"color_core_blue_700\\">#ff2079c3</color>
  <color name=\\"color_core_blue_800\\">#ff116daa</color>
  <color name=\\"color_core_blue_900\\">#ff0c5689</color>
  <color name=\\"color_core_blue_1000\\">#ff0a3960</color>
  <color name=\\"color_core_blue_1100\\">#ff002138</color>
  <color name=\\"color_core_purple_0\\">#fff2f2f9</color>
  <color name=\\"color_core_purple_100\\">#ffeaeaf9</color>
  <color name=\\"color_core_purple_200\\">#ffd8d7f9</color>
  <color name=\\"color_core_purple_300\\">#ffc1c1f7</color>
  <color name=\\"color_core_purple_400\\">#ffa193f2</color>
  <color name=\\"color_core_purple_500\\">#ff9180f4</color>
  <color name=\\"color_core_purple_600\\">#ff816fea</color>
  <color name=\\"color_core_purple_700\\">#ff6f5ed3</color>
  <color name=\\"color_core_purple_800\\">#ff5e4eba</color>
  <color name=\\"color_core_purple_900\\">#ff483a9c</color>
  <color name=\\"color_core_purple_1000\\">#ff2d246b</color>
  <color name=\\"color_core_purple_1100\\">#ff1d1d38</color>
  <color name=\\"color_core_magenta_0\\">#fffef0ff</color>
  <color name=\\"color_core_magenta_100\\">#fff9e3fc</color>
  <color name=\\"color_core_magenta_200\\">#fff4c4f7</color>
  <color name=\\"color_core_magenta_300\\">#ffedadf2</color>
  <color name=\\"color_core_magenta_400\\">#fff282f5</color>
  <color name=\\"color_core_magenta_500\\">#ffdb61db</color>
  <color name=\\"color_core_magenta_600\\">#ffc44eb9</color>
  <color name=\\"color_core_magenta_700\\">#ffac44a8</color>
  <color name=\\"color_core_magenta_800\\">#ff8f3896</color>
  <color name=\\"color_core_magenta_900\\">#ff6c2277</color>
  <color name=\\"color_core_magenta_1000\\">#ff451551</color>
  <color name=\\"color_core_magenta_1100\\">#ff29192d</color>
  <color name=\\"color_core_pink_0\\">#ffffe9f3</color>
  <color name=\\"color_core_pink_100\\">#fffcdbeb</color>
  <color name=\\"color_core_pink_200\\">#ffffb5d5</color>
  <color name=\\"color_core_pink_300\\">#ffff95c1</color>
  <color name=\\"color_core_pink_400\\">#ffff76ae</color>
  <color name=\\"color_core_pink_500\\">#ffef588b</color>
  <color name=\\"color_core_pink_600\\">#ffe0447c</color>
  <color name=\\"color_core_pink_700\\">#ffce3665</color>
  <color name=\\"color_core_pink_800\\">#ffb22f5b</color>
  <color name=\\"color_core_pink_900\\">#ff931847</color>
  <color name=\\"color_core_pink_1000\\">#ff561231</color>
  <color name=\\"color_core_pink_1100\\">#ff2b1721</color>
  <color name=\\"color_core_red_0\\">#ffffeae9</color>
  <color name=\\"color_core_red_100\\">#ffffd5d2</color>
  <color name=\\"color_core_red_200\\">#ffffb8b1</color>
  <color name=\\"color_core_red_300\\">#ffff9c8f</color>
  <color name=\\"color_core_red_400\\">#ffff7f6e</color>
  <color name=\\"color_core_red_500\\">#fff76054</color>
  <color name=\\"color_core_red_600\\">#ffed4c42</color>
  <color name=\\"color_core_red_700\\">#ffdb3e3e</color>
  <color name=\\"color_core_red_800\\">#ffc63434</color>
  <color name=\\"color_core_red_900\\">#ff992222</color>
  <color name=\\"color_core_red_1000\\">#ff6d1313</color>
  <color name=\\"color_core_red_1100\\">#ff2b1111</color>
  <color name=\\"color_core_orange_0\\">#ffffede3</color>
  <color name=\\"color_core_orange_100\\">#fffcdccc</color>
  <color name=\\"color_core_orange_200\\">#ffffc6a4</color>
  <color name=\\"color_core_orange_300\\">#ffffb180</color>
  <color name=\\"color_core_orange_400\\">#ffff9c5d</color>
  <color name=\\"color_core_orange_500\\">#fffc8943</color>
  <color name=\\"color_core_orange_600\\">#fff57d33</color>
  <color name=\\"color_core_orange_700\\">#ffed7024</color>
  <color name=\\"color_core_orange_800\\">#ffce5511</color>
  <color name=\\"color_core_orange_900\\">#ff962c0b</color>
  <color name=\\"color_core_orange_1000\\">#ff601700</color>
  <color name=\\"color_core_orange_1100\\">#ff2d130e</color>
  <color name=\\"color_core_neutral_0\\">#ffffffff</color>
  <color name=\\"color_core_neutral_100\\">#fff3f4f4</color>
  <color name=\\"color_core_neutral_200\\">#ffdee1e1</color>
  <color name=\\"color_core_neutral_300\\">#ffc8cccc</color>
  <color name=\\"color_core_neutral_400\\">#ffb0b6b7</color>
  <color name=\\"color_core_neutral_500\\">#ff929a9b</color>
  <color name=\\"color_core_neutral_600\\">#ff6e797a</color>
  <color name=\\"color_core_neutral_700\\">#ff515e5f</color>
  <color name=\\"color_core_neutral_800\\">#ff364141</color>
  <color name=\\"color_core_neutral_900\\">#ff273333</color>
  <color name=\\"color_core_neutral_1000\\">#ff162020</color>
  <color name=\\"color_core_neutral_1100\\">#ff040404</color>
  <color name=\\"color_core_yellow_0\\">#fffff8e2</color>
  <color name=\\"color_core_yellow_100\\">#fffdefcd</color>
  <color name=\\"color_core_yellow_200\\">#ffffe99a</color>
  <color name=\\"color_core_yellow_300\\">#ffffe16e</color>
  <color name=\\"color_core_yellow_400\\">#ffffd943</color>
  <color name=\\"color_core_yellow_500\\">#ffffcd1c</color>
  <color name=\\"color_core_yellow_600\\">#ffffbc00</color>
  <color name=\\"color_core_yellow_700\\">#ffdd9903</color>
  <color name=\\"color_core_yellow_800\\">#ffba7506</color>
  <color name=\\"color_core_yellow_900\\">#ff944c0c</color>
  <color name=\\"color_core_yellow_1000\\">#ff542a00</color>
  <color name=\\"color_core_yellow_1100\\">#ff2d1a05</color>
  <color name=\\"color_font_primary\\">@color/color_core_neutral_1100</color>
  <color name=\\"color_font_secondary\\">@color/color_core_neutral_900</color>
  <color name=\\"color_font_tertiary\\">@color/color_core_neutral_800</color>
  <color name=\\"color_font_interactive\\">@color/color_brand_primary</color>
  <color name=\\"color_font_interactive_hover\\">@color/color_brand_primary</color>
  <color name=\\"color_font_interactive_active\\">@color/color_brand_secondary</color>
  <color name=\\"color_font_interactive_disabled\\">@color/color_font_tertiary</color>
  <color name=\\"color_font_danger\\">@color/color_core_red_1000</color>
  <color name=\\"color_font_warning\\">@color/color_core_orange_1000</color>
  <color name=\\"color_font_success\\">@color/color_core_green_1000</color>
  <dimen name=\\"size_border_radius_large\\">480.00dp</dimen>
  <dimen name=\\"size_font_small\\">12.00sp</dimen>
  <dimen name=\\"size_font_medium\\">16.00sp</dimen>
  <dimen name=\\"size_font_large\\">24.00sp</dimen>
  <dimen name=\\"size_font_xl\\">36.00sp</dimen>
  <dimen name=\\"size_padding_small\\">8.00dp</dimen>
  <dimen name=\\"size_padding_medium\\">16.00dp</dimen>
  <dimen name=\\"size_padding_large\\">16.00dp</dimen>
  <dimen name=\\"size_padding_xl\\">16.00dp</dimen>
  
</resources>
"
`;
